# require-detective

./: .gitignore  .npmignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  index.js  package.json
crates/detective-wasm/: Cargo.toml
crates/detective-wasm/src/: lib.rs
src/: lib.rs  main.rs
test/: both.js  index.js  isrequire.js  noargs.js  parseopts.js
