[package]
name = "require-detective"
version = "0.1.0"
authors = ["Renée Kooi <renee@kooi.me>"]
edition = "2018"
license = "Apache-2.0"
description = "Find require calls in a CommonJS module"
repository = "https://github.com/goto-bus-stop/require-detective"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ressa = "0.8.1"
resast = "0.4.1"
serde = { version = "1", optional = true }
serde_derive = { version = "1", optional = true }
wasm-bindgen = { version = "0.2.49", features = ["serde-serialize"], optional = true }

[features]
npm = ["serde", "serde_derive", "wasm-bindgen"]
