[package]
name = "detective-wasm"
version = "0.1.0"
authors = ["Renée Kooi <renee@kooi.me>"]
edition = "2018"
license = "Apache-2.0"
description = "Find require calls in a CommonJS module"
repository = "https://github.com/goto-bus-stop/require-detective"

[lib]
crate-type = ["cdylib"]

[dependencies]
require-detective = { path = "../../" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "^0.2.49", features = ["serde-serialize"] }
